feat : add searchAndFilterUsers controller and helper function constructorSearchQuery
