# backend/src/controllers/user.controller.ts
@@ -96,6 +96,96 @@ const updateUserAvatar = asyncHandler(async (req, res) => {
 });
 
 
+const getAllUsers = asyncHandler(async (req, res) => {
+  //#swagger.tags = ['User']
+
+  const user = await User.find()
+
+
+  if (!user) {
+    throw new ApiError(400, "user not Found");
+  }
+
+  return res.status(201)
+    .json(new ApiResponse(201, { results: user.length, user }, "User successfully getting Hotels"));
+})
+
+const constructorSearchQuery = (queryParams: any) => {
+
+  const { name, mobile, email, roleName } = queryParams;
+
+  let constructedQuery: any = {};
+
+  if (name) constructedQuery.name = new RegExp(name, "i");
+  if (email) constructedQuery.email = new RegExp(email, "i");
+  if (mobile) constructedQuery.mobile = new RegExp(mobile, "i");
+  if (roleName) constructedQuery.roleName = roleName;
+
+
+  return constructedQuery;
+}
+
+const searchAndFilterUsers = asyncHandler(async (req, res) => {
+  //#swagger.tags = ['User - Search or Filter']
+
+  const query = constructorSearchQuery(req.query);
+
+  let sortOptions = {};
+
+  switch (req.query.sortOption) {
+    case "name":
+      sortOptions = { name: 1 };
+      break;
+    case "mobile":
+      sortOptions = { mobile: 1 };
+      break;
+    case "email":
+      sortOptions = { email: 1 };
+      break;
+    default:
+      sortOptions = { createdAt: -1 };
+  }
+
+  const pageSize = 5;
+  const pageNumber = parseInt(req.query.page?.toString() || "1", 10);
+
+
+  if (isNaN(pageNumber) || pageNumber < 1) {
+    throw new ApiError(400, "Invalid page number");
+  }
+
+  const skip = (pageNumber - 1) * pageSize;
+
+
+  const user = await User.
+    find(query)
+    .sort(sortOptions)
+    .skip(skip)
+    .limit(pageSize);
+
+
+  if (!user.length) {
+    throw new ApiError(400, "user not Found");
+  }
+
+  const total = await User.countDocuments();
+
+  const response = {
+    pagination: {
+      total: total,
+      page: pageNumber,
+      pages: Math.ceil(total / pageSize),
+    },
+    data: user,
+  }
+
+  return res.status(200)
+    .json(new ApiResponse(200, response, "User successfully Search"));
+})
+
+
+
+
 export {
   getCurrentUser,
 
@@ -103,5 +193,8 @@ export {
   updateUser,
   deleteUser,
 
-  updateUserAvatar
+  updateUserAvatar,
+
+  getAllUsers,
+  searchAndFilterUsers,
 };
